# docs/swagger/v1/admin/catalog.json
@@ -15,7 +15,7 @@
     "application/json"
   ],
   "paths": {
-    "/v1/categories": {
+    "/v1/categories/{storeId}/{currentPage}/{pageSize}": {
       "get": {
         "summary": "Get All Categories",
         "description": "returns all categories belonging to a store",
@@ -29,6 +29,24 @@
           }
         },
         "parameters": [
+          {
+            "name": "storeId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "currentPage",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "pageSize",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "sortOn",
             "in": "query",
@@ -538,16 +556,11 @@
       "properties": {
         "category": {
           "$ref": "#/definitions/Category"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "CreateCategoryResponse",
       "required": [
-        "category",
-        "status"
+        "category"
       ]
     },
     "CreateProductRequest": {
@@ -572,16 +585,11 @@
       "properties": {
         "product:omitempty": {
           "$ref": "#/definitions/Product"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "CreateProductResponse",
       "required": [
-        "product:omitempty",
-        "status"
+        "product:omitempty"
       ]
     },
     "DeleteCategoryRequest": {
@@ -604,16 +612,7 @@
     },
     "DeleteCategoryResponse": {
       "type": "object",
-      "properties": {
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
-        }
-      },
-      "title": "DeleteCategoryResponse",
-      "required": [
-        "status"
-      ]
+      "title": "DeleteCategoryResponse"
     },
     "DeleteProductRequest": {
       "type": "object",
@@ -635,16 +634,7 @@
     },
     "DeleteProductResponse": {
       "type": "object",
-      "properties": {
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
-        }
-      },
-      "title": "DeleteProductResponse",
-      "required": [
-        "status"
-      ]
+      "title": "DeleteProductResponse"
     },
     "GetAllCategoriesRequest": {
       "type": "object",
@@ -682,15 +672,20 @@
           },
           "description": " a collection of Category"
         },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
+        "totalRecords": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "totalPages": {
+          "type": "integer",
+          "format": "int64"
         }
       },
       "title": "GetAllCategoriesResponse",
       "required": [
         "categories",
-        "status"
+        "totalRecords",
+        "totalPages"
       ]
     },
     "GetAllProductsRequest": {
@@ -736,18 +731,13 @@
         "totalPages": {
           "type": "integer",
           "format": "int64"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "GetAllProductsResponse",
       "required": [
         "products",
         "totalRecords",
-        "totalPages",
-        "status"
+        "totalPages"
       ]
     },
     "GetCategoryByIdRequest": {
@@ -773,16 +763,11 @@
       "properties": {
         "category": {
           "$ref": "#/definitions/Category"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "GetCategoryByIdResponse",
       "required": [
-        "category",
-        "status"
+        "category"
       ]
     },
     "GetCategoryBySlugRequest": {
@@ -808,16 +793,11 @@
       "properties": {
         "category": {
           "$ref": "#/definitions/Category"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "GetCategoryBySlugResponse",
       "required": [
-        "category",
-        "status"
+        "category"
       ]
     },
     "GetProductByIdRequest": {
@@ -873,17 +853,12 @@
         "product": {
           "$ref": "#/definitions/Product",
           "description": " slug name of the category"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "GetProductResponse",
       "required": [
         "storeId",
-        "product",
-        "status"
+        "product"
       ]
     },
     "GetProductsByCategoryIdRequest": {
@@ -933,18 +908,13 @@
         "totalPages": {
           "type": "integer",
           "format": "int64"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "GetProductsByCategoryIdResponse",
       "required": [
         "products",
         "totalRecords",
-        "totalPages",
-        "status"
+        "totalPages"
       ]
     },
     "JwtToken": {
@@ -1113,16 +1083,11 @@
       "properties": {
         "category": {
           "$ref": "#/definitions/Category"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "UpdateCategoryResponse",
       "required": [
-        "category",
-        "status"
+        "category"
       ]
     },
     "UpdateProductRequest": {
@@ -1152,16 +1117,11 @@
       "properties": {
         "product:omitempty": {
           "$ref": "#/definitions/Product"
-        },
-        "status": {
-          "$ref": "#/definitions/ResponseStatus",
-          "description": " a ResponseStatus object"
         }
       },
       "title": "UpdateProductResponse",
       "required": [
-        "product:omitempty",
-        "status"
+        "product:omitempty"
       ]
     },
     "Variant": {
